opam-version: "2.0"
synopsis: "Rebind"
description: "Experimental automated generation of Melange bindings from JavaScript code"
maintainer: ["jchavarri"]
authors: ["jchavarri"]
license: "MIT"
homepage: "https://github.com/jchavarri/rebind"
bug-reports: "https://github.com/jchavarri/rebind/issues"
depends: [
  "ocaml"
  "dune" {>= "3.9"}
  "reason" {>= "3.10.0"}
  "js_of_ocaml"
  "ocamlformat"
  "ppx_deriving" # flow
  "ppx_gen_rec" # flow
  "ppxlib" # flow
  "base" {>= "v0.14.1"} # flow
  "wtf8" # flow
  "melange" {>= "1.0.0" & with-test}
  "ocaml-lsp-server" {with-test} # todo: use with-dev-setup once 2.2 is out
  "dot-merlin-reader" {with-test}
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/jchavarri/rebind.git"
pin-depends: [
  ["melange.dev"           "git+https://github.com/melange-re/melange.git#e114ad55d185badeb32b3c766c9ab547495eac1b"]
  ["reason.3.10.0"         "git+https://github.com/reasonml/reason.git#972261dab3b651ff8ab9b8b9fcc32940595073dc"]
]
